<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_size_medium"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:text="@string/app_name"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutAppDescription"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_size_large"
        android:layout_marginStart="@dimen/margin_padding_size_small"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:layout_marginEnd="@dimen/margin_padding_size_small"
        android:background="@drawable/description_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAppTitle">

        <LinearLayout
            android:id="@+id/layoutAppDescriptionTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_size_large"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textHowToUse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_padding_size_small"
                android:layout_marginEnd="@dimen/margin_padding_size_small"
                android:layout_weight="1"
                android:text="@string/how_to_use"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageExpandCollapseArrow"
                android:layout_width="@dimen/width_size_medium"
                android:layout_height="@dimen/height_size_medium"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/margin_padding_size_small"
                android:clickable="true"
                android:contentDescription="@string/image_description_expand_collapse"
                android:focusable="true"
                app:srcCompat="@drawable/image_expand"
                app:tint="@color/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/textAppDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_size_small"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:text="@string/app_description"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/textSetOfIgnoredCharacters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_size_small"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:layout_marginBottom="@dimen/margin_padding_size_small"
            android:background="@drawable/ignored_characters_background"
            android:gravity="center"
            android:minHeight="36dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

        <LinearLayout
            android:id="@+id/layoutUserAddIgnoredCharacters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_medium"
            android:layout_marginBottom="@dimen/margin_padding_size_small"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutAddIgnoredCharacters"
                android:layout_width="@dimen/width_size_large"
                android:layout_height="@dimen/height_size_xlarge"
                android:hint="@string/symbols"
                android:textColorHint="@color/blue_grey_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAddIgnoredCharacters"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue_grey_50"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"
                    android:maxLength="100"
                    android:selectAllOnFocus="true"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonAddIgnoredCharacters"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_size_large"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:text="@string/add_characters" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textReversed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_size_small"
        android:layout_marginEnd="@dimen/margin_padding_size_small"
        android:layout_marginBottom="@dimen/margin_padding_size_small"
        android:text="@string/advice"
        android:textAlignment="textStart"
        android:textColor="@color/teal_700"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/layoutTextToReverse"
        app:layout_constraintEnd_toEndOf="@+id/layoutTextToReverse"
        app:layout_constraintStart_toStartOf="@+id/layoutTextToReverse" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTextToReverse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_size_xlarge"
        android:layout_marginStart="@dimen/margin_padding_size_medium"
        android:layout_marginEnd="@dimen/margin_padding_size_medium"
        android:layout_marginBottom="@dimen/margin_padding_size_small"
        android:clickable="false"
        android:hint="@string/input_your_text_here"
        android:nestedScrollingEnabled="true"
        android:scrollbars="vertical"
        android:textColorHint="@color/blue_grey_200"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toTopOf="@+id/buttonReverseWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextToReverse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue_grey_50"
            android:clickable="false"
            android:imeOptions="actionDone"
            android:maxLength="80"
            android:selectAllOnFocus="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonReverseWords"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_size_large"
        android:layout_marginBottom="@dimen/margin_padding_size_medium"
        android:text="@string/reverse_words"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/layoutTextToReverse"
        app:layout_constraintStart_toStartOf="@+id/layoutTextToReverse" />

</androidx.constraintlayout.widget.ConstraintLayout>